[package]
name = "melo-das-rpc"
version = "0.0.1"
description = "RPC interfaces for interacting with Melodot nodes concerning data availability."
license = "Apache-2.0"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[dependencies]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42"}

codec = { package = "parity-scale-codec", version = "3.6.1" }
jsonrpsee = { version = "0.16.2", features = ["server", "client", "macros"] }
thiserror = "1.0"
serde = { version = "1.0.159", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }

melodot-runtime = { path = "../../runtime" }
melo-core-primitives = { path = "../core-primitives" }
melo-das-network = { path = "../das-network" }
melo-das-network-protocol = { path = "../das-network/protocol" }
melo-daser = { path = "../daser" }

[dev-dependencies]