[package]
name = "frame-system-ext"
description = "Extends the frame-system functionality to support custom block headers."
license = "Apache-2.0"
version = "4.0.0-dev"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]  }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"]}
serde = { version = "1.0.136", features = ["derive"], optional = true }

melo-core-primitives = { version = "0.1.0", path = "../core-primitives", default-features = false }

frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0"  }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0"  }
sp-application-crypto = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0"  }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0"}

[dev-dependencies]
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"log/std",
	"melo-core-primitives/std",
	"melo-core-primitives/outside",
	"sp-application-crypto/std",
	"sp-runtime/std",
]
