[package]
name = "frame-system-ext"
description = "Extends the frame-system functionality to support custom block headers."
license = "Apache-2.0"
version = "4.0.0-dev"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]  }
scale-info = { version = "2.10.0", default-features = false, features = ["derive", "serde"]}
# serde = { features = ["derive"] }

melo-core-primitives = { path = "../core-primitives", default-features = false, features = ["serde"] }

frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0"  }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0"  }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0"  }
sp-runtime = { default-features = false, features = ["serde"], git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0"}

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", features = ["serde"] }

[features]
default = ["std"]
std = [
	"codec/std",
	# "serde/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"log/std",
	"melo-core-primitives/std",
	# "melo-core-primitives/outside",
	"sp-application-crypto/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
]
