[package]
name = "melo-erasure-coding"
description = "Polynomial erasure coding implementation used in Melodot"
license = "Apache-2.0"
version = "0.1.0"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
# Necessary for CLI options to work on benches
bench = false

[dependencies]
melo-das-primitives = { default-features = false, version = "0.1.0", path = "../das-primitives"}

rust-kzg-blst = { git = "https://github.com/ZeroDAO/rust-kzg.git", rev = "de872ad", default-features = false }
kzg = { git = "https://github.com/ZeroDAO/rust-kzg.git", rev = "de872ad", default-features = false }

derive_more = "0.99.17"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
rust-kzg-blst = { git = "https://github.com/ZeroDAO/rust-kzg.git", rev = "de872ad", default-features = false, features = ["rand"] }

[features]
default = ["std","parallel"]
std = [
    "rust-kzg-blst/std",
    "kzg/std",
    "melo-das-primitives/std",
]
parallel = ["rust-kzg-blst/parallel"]
