[package]
name = "pallet-farmers-fortune"
description = "A Substrate pallet for farmers fortune."
license = "Apache-2.0"
version = "0.0.1"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
melo-core-primitives = { version = "0.1.0", path = "../core-primitives", default-features = false }
melo-proof-of-space = { version = "0.0.1", path = "../proof-of-space", default-features = false }

sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
std = [
    "melo-core-primitives/std",
    "frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "melo-proof-of-space/std"
]