[package]
name = "pallet-farmers-fortune"
description = "A Substrate pallet for farmers fortune."
license = "Apache-2.0"
version = "0.0.1"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# melodot
melo-core-primitives = { version = "0.1.0", path = "../core-primitives", default-features = false }
melo-proof-of-space = { version = "0.0.1", path = "../proof-of-space", default-features = false }

# substrate
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

# runtime-benchmarks
melo-das-primitives = { default-features = false, version = "0.1.0", optional = true, path = "../das-primitives" }
pallet-melo-store = { version = "0.1.0", optional = true, path = "../pallet-melo-store", default-features = false }

[dev-dependencies]
melo-das-primitives = { version = "0.1.0", path = "../das-primitives" }

sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
melo-proof-of-space = { version = "0.0.1", path = "../proof-of-space" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
lazy_static = "1.4.0"

[features]
default = ["std"]
std = [
    "melo-core-primitives/std",
    "frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "melo-proof-of-space/std",
    "sp-core/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
    "melo-das-primitives",
    "pallet-melo-store",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]