[package]
name = "pallet-farmers-fortune"
description = "A Substrate pallet for farmers fortune."
license = "Apache-2.0"
version = "0.0.1"
authors = ["DKLee <xiuerdwy@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]


[features]
default = ["std"]
std = [

]