[package]
name = "melodot-light-client-e2e"
version = "0.0.1"
description = "Melodot light client"
authors = ["DKLee <xiuerdwy@gmail.com>"]
repository = "https://github.com/ZeroDAO/melodot"
keywords = ["substrate"]
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "melodot-light-e2e"
path = "src/main.rs"

[dependencies]
meloxt = { path = "../../crates/meloxt" }
melo-das-rpc = { path = "../../crates/das-rpc" }
melo-core-primitives = { path = "../../crates/core-primitives" }

subxt = { version = "0.31.0"}
subxt-signer = { version = "0.31.0", features = ["subxt"] }

hex = "0.4"
clap = { version = "4.0.9", features = ["derive","env"] }
anyhow = "1.0.66"
tracing = "0.1.37"
tokio-stream = { version = "0.1" }
tracing-subscriber = { version = "0.2.25", features = ["json"] }
tokio = { version = "1.21.2", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
jsonrpsee = { version = "0.16.2", features = ["full"] }
log = "0.4"
async-trait = "0.1.56"
serde_json = "1.0"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.6.0" }